Fix white vertical line overflow issue at 384px width - Changed projectContainer width from 100vw to 100% to prevent horizontal overflow - Added global overflow-x: hidden to html and body elements - Removed overflow: hidden from .box class - Eliminates white vertical line appearing on right side of viewport at mobile screen sizes

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 @font-face {
   font-family: streamster;
   src: url("fonts/Streamster.ttf");
@@ -692,7 +697,7 @@ hr {
     transform:scale(0.5);
     }
   .projectContainer.projectContainer {
-    width: 100vw;
+    width: 100%;
     position: relative;
     display: flex;   
     flex-wrap:wrap;
@@ -824,7 +829,7 @@ hr {
     transform:scale(0.8);
     }
     .projectContainer {
-      width: 100vw;
+      width: 100%;
       position: relative;
       display: flex;   
       flex-wrap:wrap;
@@ -838,8 +843,7 @@ hr {
     position: relative;
     border-radius: 10px;
     padding:2%;
-    margin: 5%;
-    ;
+    margin: 25px;    
     height:200px;
   }
   
@@ -960,7 +964,7 @@ hr {
 
 
 .projectContainer {
-    width: 100vw;
+    width: 100%;
     position: relative;
     display: flex;   
     flex-wrap:wrap;
@@ -1184,7 +1188,6 @@ a.projectLinkText {
 /* Ensure boxes maintain their layout */
 .box {
   position: relative;
-  overflow: hidden;
   min-height: 200px;
 }
 
